Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31080

qt-linux-opensource-5.1.0-beta1-x86_64-offline-2013-05-10-28.run: Warnings from multimedia examples

XMLWordPrintable

      Most of them are probably caused by missing backends, but, maybe they can terminate more cleanly in that case?

      Launched /opt/Qt/Qt510OS28/5.1.0-beta1/gcc_64/examples/multimedia/declarative-radio/declarative-radio, PID: 32356
      Unexpected stderr:
      defaultServiceProvider::requestService(): no service found for - "org.qt-project.qt.radio" 
      QObject::connect: Cannot connect (null)::programTypeChanged(QRadioData::ProgramType) to QDeclarativeRadioData::_q_programTypeChanged(QRadioData::ProgramType)
      QObject::connect: Cannot connect (null)::stationIdChanged(QString) to QDeclarativeRadioData::stationIdChanged(QString)
      QObject::connect: Cannot connect (null)::programTypeNameChanged(QString) to QDeclarativeRadioData::programTypeNameChanged(QString)
      QObject::connect: Cannot connect (null)::stationNameChanged(QString) to QDeclarativeRadioData::stationNameChanged(QString)
      QObject::connect: Cannot connect (null)::radioTextChanged(QString) to QDeclarativeRadioData::radioTextChanged(QString)
      QObject::connect: Cannot connect (null)::alternativeFrequenciesEnabledChanged(bool) to QDeclarativeRadioData::alternativeFrequenciesEnabledChanged(bool)
      QObject::connect: Cannot connect (null)::error(QRadioData::Error) to QDeclarativeRadioData::_q_error(QRadioData::Error)
      Testing: qmlscene /opt/Qt/Qt510OS28/5.1.0-beta1/gcc_64/examples/multimedia/audioengine/qml/audioengine.qml
      Launched qmlscene, PID: 32363
      
      Launched /opt/Qt/Qt510OS28/5.1.0-beta1/gcc_64/examples/multimedia/audioinput/audioinput, PID: 32376
      Unexpected stderr:
      state =  ActiveState
      bytesReady =  486 ,  elapsedUSecs =  1003000 ,  processedUSecs =  977500 
      bytesReady =  488 ,  elapsedUSecs =  2003000 ,  processedUSecs =  1978875 
      bytesReady =  324 ,  elapsedUSecs =  3004000 ,  processedUSecs =  2982375 
      Testing /opt/Qt/Qt510OS28/5.1.0-beta1/gcc_64/examples/multimedia/radio
      Testing: /opt/Qt/Qt510OS28/5.1.0-beta1/gcc_64/examples/multimedia/radio/radio
      Launched /opt/Qt/Qt510OS28/5.1.0-beta1/gcc_64/examples/multimedia/radio/radio, PID: 32381
      Unexpected stderr:
      defaultServiceProvider::requestService(): no service found for - "org.qt-project.qt.radio" 
      Testing /opt/Qt/Qt510OS28/5.1.0-beta1/gcc_64/examples/multimedia/video/qmlvideofx
      Testing: /opt/Qt/Qt510OS28/5.1.0-beta1/gcc_64/examples/multimedia/video/qmlvideofx/qmlvideofx
      Launched /opt/Qt/Qt510OS28/5.1.0-beta1/gcc_64/examples/multimedia/video/qmlvideofx/qmlvideofx, PID: 32385
      Unexpected stderr:
      [qmlvideofx] main.init
      [qmlvideofx] Content.init
      [qmlvideofx] Content.openImage "qrc:/images/qt-logo.png"
      [qmlvideofx] Content.stop
      [qmlvideofx] Content.updateSource
      [qmlvideofx] Content.onEffectSourceChanged EffectPassThrough.qml
      [qmlvideofx] Content.updateSource
      [qmlvideofx] performanceLoader.init logging false visible true
      [frequencymonitor] FrequencyMonitor::FrequencyMonitor 
      [frequencymonitor] FrequencyMonitor::FrequencyMonitor 
      
      Launched /opt/Qt/Qt510OS28/5.1.0-beta1/gcc_64/examples/multimedia/video/qmlvideo/qmlvideo, PID: 32392
      Unexpected stderr:
      qrc:///qml/qmlvideo/DisableScreenSaver.qml:43:1: module "QtSystemInfo" is not installed
      [qmlvideo] performanceLoader.init logging false visible true
      [frequencymonitor] FrequencyMonitor::FrequencyMonitor 
      [frequencymonitor] FrequencyMonitor::FrequencyMonitor 
      
      Launched /opt/Qt/Qt510OS28/5.1.0-beta1/gcc_64/examples/multimedia/audiooutput/audiooutput, PID: 32404
      Unexpected stderr:
      state =  ActiveState
      bytesFree =  14994 ,  elapsedUSecs =  1069000 ,  processedUSecs =  1220000 
      bytesFree =  15752 ,  elapsedUSecs =  2029000 ,  processedUSecs =  2180000 
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ablasche Alex Blasche
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes